cabal-version:       3.0
name:                janus
version:             0.0.0.1
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/njaremko/janus
bug-reports:         https://github.com/njaremko/janus/issues
license:             MIT
license-file:        LICENSE
author:              Nathan Jaremko
maintainer:          Nathan Jaremko <nathan@jaremko.ca>
copyright:           2021 Nathan Jaremko
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/njaremko/janus.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , time
                     , attoparsec
                     , text
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -haddock

  default-extensions:  ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude NumericUnderscores OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Janus
                    ,  Janus.Units
                    ,  Janus.Duration
                    ,  Janus.Instant
                    ,  Janus.LocalDate
                    ,  Janus.LocalDateTime
                    ,  Janus.LocalTime
                    ,  Janus.OffsetDateTime
                    ,  Janus.OffsetTime
                    ,  Janus.Temporal
                    ,  Janus.Offset
                    ,  Janus.TimeZone
                    ,  Janus.ZonedDateTime

executable janus
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       janus
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite janus-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       janus
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark janus-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , janus
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
